src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Cell__c</fullName>
        <label>Cell #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>HiddenOwnerID__c</fullName>
        <label>HiddenOwnerID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home__c</fullName>
        <label>Home #</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Orphaned__c</fullName>
        <label>Last Orphaned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Re_Parented__c</fullName>
        <label>Last Re-Parented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RetainOwnership__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to be checked if the activity ownership should not change on change of Case ownership</description>
        <label>Retain Ownership</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Voicemail_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Voicemail Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Work_Ext__c</fullName>
        <label>Work Ext</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Work__c</fullName>
        <label>Work #</label>
        <type>Phone</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>